# colophon

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
colophon/: anthropic.py  audit.py  backfill.py  cli.py  enrich.py  epub.py  grimmory.py  hardcover.py  heal.py  maintain.py  matcher.py  oversight.py  resolver.py  series_audit.py  store.py  verify.py
tests/: test_enrich.py  test_epub.py  test_maintain_email.py  test_resolve_escalation.py  test_resolve_skip.py  test_series_audit.py  test_verify.py
