[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "colophon"
version = "0.1.0"
description = "Autonomous library-metadata healer for Booklore-family book servers"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "vidaks" }]
keywords = ["booklore", "metadata", "library", "hardcover", "ebooks", "automation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Utilities",
]
dependencies = []  # standard library only — no third-party runtime deps

[project.urls]
Homepage = "https://github.com/vidaks/colophon"
Issues = "https://github.com/vidaks/colophon/issues"

[project.scripts]
colophon = "colophon.cli:main"

[tool.setuptools]
packages = ["colophon"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
# Build gate = critical errors only (syntax + undefined names). Contributors may expand.
select = ["E9", "F63", "F7", "F82"]
